--- a/index.html
+++ b/index.html
@@ -1,59 +1,87 @@
 <!doctype html>
 <html lang="es">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Unique — Escapadas y experiencias</title>
-<link rel="stylesheet" href="assets/css/styles.css" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Unique — Escapadas y experiencias</title>
+  <link rel="stylesheet" href="assets/css/styles.css" />
 </head>
 <body>
-<header class="site-header">
-<div class="container header-inner">
-<a class="logo" href="/unique/">Unique</a>
-<nav class="nav" aria-label="Principal">
-<button class="nav-toggle" aria-expanded="false" aria-controls="nav-menu">☰</button>
-<ul id="nav-menu" class="menu">
-<li class="has-dropdown"><a href="#">Escapadas</a>
-<ul class="dropdown">
-<li><a href="listing.html?tag=romanticas">Románticas</a></li>
-<li><a href="listing.html?tag=spa">Spa & Relax</a></li>
-<li><a href="listing.html?tag=aventura">Aventura</a></li>
-</ul>
-</li>
-<li class="has-dropdown"><a href="#">Destinos</a>
-<ul class="dropdown">
-<li><a href="listing.html?city=Barcelona">Barcelona</a></li>
-<li><a href="listing.html?city=Madrid">Madrid</a></li>
-<li><a href="listing.html?city=Valencia">Valencia</a></li>
-</ul>
-</li>
-<li><a href="listing.html">Ofertas</a></li>
-<li><a href="#contacto">Ayuda</a></li>
-<li><a class="cart-link" href="checkout.html">Carrito <span id="cart-count">0</span></a></li>
-</ul>
-</nav>
-</div>
-</header>
+  <header class="site-header">
+    <div class="container header-inner">
+      <a class="logo" href="/unique/">Unique</a>
+      <nav class="nav" aria-label="Principal">
+        <button class="nav-toggle" aria-expanded="false" aria-controls="nav-menu">☰</button>
+        <ul id="nav-menu" class="menu">
+          <li class="has-dropdown"><a href="#">Escapadas</a>
+            <ul class="dropdown">
+              <li><a href="listing.html?tag=romanticas">Románticas</a></li>
+              <li><a href="listing.html?tag=spa">Spa & Relax</a></li>
+              <li><a href="listing.html?tag=aventura">Aventura</a></li>
+            </ul>
+          </li>
+          <li class="has-dropdown"><a href="#">Destinos</a>
+            <ul class="dropdown">
+              <li><a href="listing.html?city=Barcelona">Barcelona</a></li>
+              <li><a href="listing.html?city=Madrid">Madrid</a></li>
+              <li><a href="listing.html?city=Valencia">Valencia</a></li>
+            </ul>
+          </li>
+          <li><a href="listing.html">Ofertas</a></li>
+          <li><a href="#contacto">Ayuda</a></li>
+          <li><a class="cart-link" href="checkout.html">Carrito <span id="cart-count">0</span></a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
+  <main>
+    <section class="hero">
+      <div class="container hero-inner">
+        <h1>Escapadas únicas al mejor precio</h1>
+        <p>Encuentra tu próxima experiencia con estancias, spa y más.</p>
+        <form class="search" action="listing.html" method="get">
+          <label class="has-suggest">
+            <span>Destino</span>
+            <input id="destino" type="text" name="q" placeholder="Ciudad o región" autocomplete="off" />
+            <div id="destino-suggest" class="suggest"></div>
+          </label>
+          <label>
+            <span>Entrada</span>
+            <input type="date" name="checkin" />
+          </label>
+          <label>
+            <span>Salida</span>
+            <input type="date" name="checkout" />
+          </label>
+          <label>
+            <span>Personas</span>
+            <select name="guests">
+              <option value="2" selected>2</option>
+              <option value="1">1</option>
+              <option value="3">3</option>
+              <option value="4">4</option>
+            </select>
+          </label>
+          <button class="btn" type="submit">Buscar</button>
+        </form>
 
-<main>
-<section class="hero">
-<div class="container hero-inner">
-<h1>Escapadas únicas al mejor precio</h1>
-<p>Encuentra tu próxima experiencia con estancias, spa y más.</p>
-<form class="search" action="listing.html" method="get">
-<label>
-<span>Destino</span>
-<input type="text" name="q" placeholder="Ciudad o región" />
-</label>
-<label>
-<span>Entrada</span>
-<input type="date" name="checkin" />
-</label>
-<label>
-<span>Salida</span>
-<input type="date" name="checkout" />
-</label>
-<label>
-<span>Personas</span>
-</html>
+        <!-- Mosaico de categorías / destinos -->
+        <div class="quick-cats">
+          <a class="qcard" href="listing.html?tag=romanticas">
+            <img src="https://images.unsplash.com/photo-1528909514045-2fa4ac7a08ba?q=80&w=1400&auto=format&fit=crop" alt="Románticas">
+            <span>Románticas</span>
+          </a>
+          <a class="qcard" href="listing.html?tag=spa">
+            <img src="https://images.unsplash.com/photo-1544161515-4ab6ce6db874?q=80&w=1400&auto=format&fit=crop" alt="Spa & Relax">
+            <span>Spa & Relax</span>
+          </a>
+          <a class="qcard" href="listing.html?tag=aventura">
+            <img src="https://images.unsplash.com/photo-1500530855697-b586d89ba3ee?q=80&w=1400&auto=format&fit=crop" alt="Aventura">
+            <span>Aventura</span>
+          </a>
+          <a class="qcard" href="listing.html?city=Barcelona">
+            <img src="https://images.unsplash.com/photo-1511735111819-9a3f7709049c?q=80&w=1400&auto=format&fit=crop" alt="Barcelona">
+            <span>Barcelona</span>
+          </a>
+          <a cl
