--- a/index.html
+++ b/index.html
@@ -63,18 +63,17 @@
         <h1>Unique getaways at the best price</h1>
         <p>Find your next experience with stays, spa and more.</p>
 
+        <!-- SEARCH BAR -->
         <form class="search" action="listing.html" method="get">
-          <!-- DESTINATION with Tesco-style panel -->
+          <!-- DESTINATION (Tesco-style two-level) -->
           <label class="has-mega">
             <span>Destination</span>
             <input id="destino" type="text" name="q" placeholder="City or region" autocomplete="off" />
             <div class="mega-panel solid" id="form-destinations" role="menu" aria-label="Destinations">
               <div class="mega-inner form">
-                <!-- Level 1 -->
                 <aside class="mega-col l1" aria-label="Regions">
                   <ul id="dest-l1" class="menu-plain"></ul>
                 </aside>
-                <!-- Level 2 -->
                 <section class="mega-col l2" aria-label="Areas">
                   <h4 id="dest-l2-title">Select a region</h4>
                   <ul id="dest-l2" class="menu-plain single"></ul>
@@ -83,16 +82,14 @@
             </div>
           </label>
 
-          <!-- DATE RANGE (two months) -->
+          <!-- ONE DATE FIELD (range) -->
           <label class="has-daterange">
-            <span>Check-in</span>
-            <input id="checkin" type="text" inputmode="numeric" placeholder="dd/mm/yyyy" name="checkin" maxlength="10" />
+            <span>Dates</span>
+            <input id="dates" type="text" placeholder="dd/mm/yyyy – dd/mm/yyyy" readonly />
+            <!-- Hidden fields submitted to the server -->
+            <input id="checkin" name="checkin" type="hidden" />
+            <input id="checkout" name="checkout" type="hidden" />
             <div id="date-range" class="range-panel"></div>
-          </label>
-
-          <label>
-            <span>Check-out</span>
-            <input id="checkout" type="text" inputmode="numeric" placeholder="dd/mm/yyyy" name="checkout" maxlength="10" />
           </label>
 
           <!-- GUESTS -->
@@ -119,6 +116,7 @@
           <button class="btn" type="submit">Search</button>
         </form>
 
+        <!-- QUICK CATEGORIES -->
         <div class="quick-cats">
           <a class="qcard" href="listing.html?tag=romantic">
             <img src="https://images.unsplash.com/photo-1528909514045-2fa4ac7a08ba?q=80&w=1400&auto=format&fit=crop" alt="Romantic"><span>Romantic</span>
